--- a/spotify_clone/style.css
+++ b/spotify_clone/style.css
@@ -164,9 +164,11 @@ a{
     border-radius: 0.5rem;
     padding: 1rem;
     margin-left: 1.5rem;
+    margin-top: 1rem;
 }
 .card-container{
     display: flex;
+    flex-wrap: wrap;
 
 }
 .card-img{
