--- a/spotify_clone/style.css
+++ b/spotify_clone/style.css
@@ -140,6 +140,7 @@ a{
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0 1rem 0;
+    z-index: 10;
 }
 .sticky-nav-icons {
     margin-left: 0.75rem;
@@ -169,8 +170,9 @@ a{
 .card-container{
     display: flex;
     flex-wrap: wrap;
-
+    cursor: pointer;
 }
+
 .card-img{
     width: 100%;
     border-radius: 0.5rem;
@@ -186,7 +188,89 @@ a{
     width: 100%;
     border-radius: 50%;
 }
+.card-imgss{
+    width: 100%;
+    height: 75%;
+    
+}
 .card-container:hover{
     opacity: 10;
 
+}
+.footer{
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.line{
+    width: 90%;
+    height: 50%;
+    border-top: 1px solid white;
+    opacity: 0.4;
+}
+.music-player{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.album{
+    width: 25%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.album-img{
+    height:4rem;
+    width: 4rem;
+    border-radius: 0.5rem;
+}
+.content{
+   display: flex;
+   
+}
+.player{
+    width: 50%;
+}
+.controls{
+    width: 25%;
+}
+.players-controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-control-icon{
+    height: 1rem;
+    margin-right: 1.5rem;
+    opacity: 0.7;
+
+}
+.player-control-icon:hover{
+    opacity: 1;
+}
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.progress-bar{
+    width: 70%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.progress-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    border-radius: 100px;
+    height: 0.2rem;
+}
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    margin-top: -6px;
 }
